<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <!-- Tombol Back -->
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/btn_back_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Nama Larutan -->
        <TextView
            android:id="@+id/tv_nama_larutan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_larutan"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:autoSizeTextType="none"
            app:layout_constraintTop_toBottomOf="@id/iv_back"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/et_nama_larutan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/nama_larutan_uji"
            android:background="@drawable/grey_bg"
            android:textColor="@color/black"
            android:padding="12dp"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@id/tv_nama_larutan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_edit_nama"
            android:layout_marginTop="8dp" />

        <ImageButton
            android:id="@+id/btn_edit_nama"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/baseline_edit_24"
            android:background="@null"
            android:contentDescription="@string/edit_nama"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_nama_larutan" />

        <!-- Deskripsi Larutan -->
        <TextView
            android:id="@+id/tv_deskripsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:autoSizeTextType="none"
            app:layout_constraintTop_toBottomOf="@id/et_nama_larutan"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/et_deskripsi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/deskripsi_kosong"
            android:background="@drawable/grey_bg"
            android:textColor="@color/black"
            android:padding="12dp"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@id/tv_deskripsi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_edit_deskripsi"
            android:layout_marginTop="8dp" />

        <ImageButton
            android:id="@+id/btn_edit_deskripsi"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/baseline_edit_24"
            android:background="@null"
            android:contentDescription="@string/edit_deskripsi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_deskripsi" />

        <LinearLayout
            android:id="@+id/linear_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/et_deskripsi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/btn_simpan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simpan_data"
                android:textSize="16dp"
                android:backgroundTint="@color/blue"
                android:textColor="@color/white"
                android:layout_marginRight="16dp"/>

            <Button
                android:id="@+id/btn_hapus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hapus_data"
                android:textSize="16dp"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/red"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Gambar Larutan -->
        <TextView
            android:id="@+id/tv_gambar_larutan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gambar_larutan"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:autoSizeTextType="none"
            app:layout_constraintTop_toBottomOf="@id/linear_buttons"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

        <ImageView
            android:id="@+id/iv_gambar"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:contentDescription="@string/gambar_larutan"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toBottomOf="@id/tv_gambar_larutan"
            android:src="@drawable/baseline_image_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <!-- Hasil pH dengan indikator di sebelahnya -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:id="@+id/layout_ph"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/iv_gambar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Judul Hasil Prediksi -->
            <TextView
                android:id="@+id/tv_hasil_ph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hasil_prediksi"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold"
                android:autoSizeTextType="none"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Indikator warna pH di sebelahnya -->
            <View
                android:id="@+id/view_ph_indicator"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="8dp"
                android:scaleType="centerCrop"
                android:background="@drawable/bg_rounded_box"
                app:layout_constraintStart_toEndOf="@id/tv_hasil_ph"
                app:layout_constraintTop_toTopOf="@id/tv_hasil_ph"
                app:layout_constraintBottom_toBottomOf="@id/tv_hasil_ph"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Informasi pH -->
        <TextView
            android:id="@+id/tv_ph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:hint="@string/hasil_prediksi_hint"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:textSize="18dp"
            android:textStyle="bold"
            android:autoSizeTextType="none"
            android:background="@drawable/bg_rounded_box_purple"
            app:layout_constraintTop_toBottomOf="@id/layout_ph"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Keterangan -->
        <TextView
            android:id="@+id/tv_histori_keterangan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keterangan"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:autoSizeTextType="none"
            app:layout_constraintTop_toBottomOf="@id/tv_ph"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/et_keterangan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_box"
            android:padding="12dp"
            android:text="@string/hasil_keterangan"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:justificationMode="inter_word"
            android:hyphenationFrequency="normal"
            android:autoSizeTextType="none"
            app:layout_constraintTop_toBottomOf="@id/tv_histori_keterangan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
