<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.IntroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="@string/intro_title3"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="33dp"
                android:textStyle="bold"
                android:autoSizeTextType="none"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="266dp"
                android:layout_height="279dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                app:srcCompat="@drawable/hal3" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_text3"
                android:textAlignment="center"
                android:textSize="18dp"
                android:layout_marginTop="32dp"
                android:lineSpacingExtra="10dp"
                android:autoSizeTextType="none"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/startBtn"
                style="@android:style/Widget.Button"
                android:layout_margin="32dp"
                android:background="@drawable/purple_bg"
                android:textColor="@color/white"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_intro3"
                android:textStyle="bold"
                android:textSize="20dp"/>

        </LinearLayout>
    </ScrollView>

    <!-- Progress Overlay -->
    <FrameLayout
        android:id="@+id/progressOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_transparent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_gravity="center"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>